# LinuxAppDev2025

./: README.md
01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  script1.gdb  script2.gdb
05_Regexps/: Makefile  esub.c
06_Tracing/: Makefile  move.c  save.c
07_Environmental/: CMakeLists.txt
07_Environmental/src/: CMakeLists.txt  rhasher.c
07_Environmental/tests/: CMakeLists.txt  test-md5.sh  test-sha1.sh
08_I18n/: CMakeLists.txt
08_I18n/po/: CMakeLists.txt  ru.po
08_I18n/src/: CMakeLists.txt  guess.c
09_PatchDiff/: Makefile
09_PatchDiff/patches/: 1.patch  2.patch  3.patch
09_PatchDiff/src/: labyrinth.c
10_LibTesting/: CMakeLists.txt
10_LibTesting/include/: buf.h
10_LibTesting/src/: CMakeLists.txt
10_LibTesting/tests/: CMakeLists.txt  test_grow.c  test_init.c  test_pop.c  test_push.c
11_Documenting/: CMakeLists.txt
11_Documenting/po/: CMakeLists.txt  ru.po
11_Documenting/src/: CMakeLists.txt  guess.c
12_InstallPackaging/: CMakeLists.txt  Doxyfile.in  README.md
12_InstallPackaging/cmake/: cmake_uninstall.cmake.in
12_InstallPackaging/docs/: mainpage.dox
12_InstallPackaging/po/: CMakeLists.txt  POTFILES.in  ru.po
12_InstallPackaging/src/: CMakeLists.txt  numberlib.c  numberlib.h  numberstat.c
12_InstallPackaging/tests/: CMakeLists.txt  test_binary.c  test_hex.c  test_roman.c  test_symbol.c
